--- a/header.css
+++ b/header.css
@@ -16,18 +16,18 @@
     flex: 1;
     text-align: center;
     border: 2px solid rgb(20, 20, 20);
+    border-radius: 12px;
+
+    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.9) 0%, rgba(30, 30, 30, 0.4) 50%);
 }
 .navbar a{
     color: whitesmoke;
     text-decoration: none;
     padding: 15px;
     display: block;
-
-    transition: background-color 0.5s;
-    transition: border-radius 20ms;
 }
-.navbar a:hover{
-    border-radius: 9px;
+.navbar li:hover{
+    border-radius: 12px;
     background-color: rgb(50, 50, 50);
     cursor: pointer;
 }
@@ -41,16 +41,16 @@
     padding:  15px;
     margin: 0px;
 
-    transition: background-color 0.5s;
-    transition: border-radius 20ms;
+    border-radius: 12px;
+
+    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.9) 0%, rgba(30, 30, 30, 0.4) 50%);
 }
 .contactdd p:hover{
     background-color: rgb(50, 50, 50);
-    border-radius: 9px;
+    border-radius: 12px;
 }
 .contactdd .contacts {
     background-color: rgb(20, 20, 20);
-    border: 3px solid rgb(20, 20, 20);
     border-radius: 12px;
 
     position: absolute;
@@ -66,7 +66,14 @@
     opacity: 0.9;
 }
 .contactdd .contacts a{
+    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.9) 0%, rgba(30, 30, 30, 0.4) 50%);
     cursor: pointer;
+    margin: 5px;
+
+    border-radius: 12px;
+}
+.contactdd .contacts a:hover{
+    background-color: rgb(50, 50, 50);
 }
 
 /* copy number (refer index.js)*/
